# kr_50_r2500

kr_50_r2500_configurations/: CMakeLists.txt  package.xml
kr_50_r2500_description/: CMakeLists.txt  package.xml
kr_50_r2500_description/config/: joint_trajectory_controller_config.yaml  ros2_controller_config.yaml  ros2_controllers.yaml  rsi_config.yaml  view_cell.rviz
kr_50_r2500_description/launch/: display.launch  display.launch.py  start.launch.py  upload.launch
kr_50_r2500_description/meshes/: link1.STL  link2.STL  link3.STL  link5.STL
kr_50_r2500_description/urdf/: kr_50_r2500.xacro  kr_50_r2500_alone.xacro  kr_50_r2500_gazebo.xacro  kr_50_r2500_gripper.xacro  kr_50_r2500_pybullet.urdf  kr_50_r2500_pybullet.xacro  kr_50_r2500_robot.xacro  kr_50_r2500_ros2_control.xacro  kr_50_r2500_rviz.xacro  kr_50_r2500_transmission.xacro  kuka_robotiq.xacro  tmp.urdf
kr_50_r2500_gazebo/: CMakeLists.txt  package.xml
kr_50_r2500_moveit/: .setup_assistant  CMakeLists.txt  package.xml
kr_50_r2500_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kr_50_r2500_pybullet/: CMakeLists.txt  package.xml
kr_50_r2500_pybullet/config/: kr_50_r2500_params.yaml  pybullet_param.yaml
kr_50_r2500_pybullet/launch/: load_config.launch  load_robot_config.launch  simulation.launch
kr_50_r2500_utils/: CMakeLists.txt  package.xml
kr_50_r2500_utils/config/: exec_params.yaml  go_to_location_server.yaml
kr_50_r2500_utils/launch/: coke_scene_spawner.launch  goto.launch  load_param.launch  save_param_on_mongo.launch  set_collection_name.launch
kr_50_r2500_utils/src/: param_mongo_utils.py
(+90 files in other folders)
